# Spark_quickstart

./: README.md  pyproject.toml  spark_readers.py
datasets/: debates.json
